# fraud-detection

./: .dockerignore  .gitignore  CARD_VIEW_FEATURE.md  CLAUDE.md  CONSOLIDATED_ROUTING.md  DOCUMENTATION.md  FEATURES.md  LLM_INTEGRATION.md  LLM_TESTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WARP.md  docker-compose.yml  start_with_llm.sh
backend/: .env.example  COMMANDS.md  Dockerfile  MIGRATION_TO_UV.md  README.md  __init__.py  convert_datasets.py  examine_datasets.py  generate_transactions.py  pyproject.toml  pyrightconfig.json  run.sh  test_model_service.py  test_openrouter.py  test_shap_integration.py
backend/app/: __init__.py  config.py  database.py  db_models.py  db_service.py  feature_engineering.py  fraud_detector.py  main.py  model_loader.py  model_service.py  models.py  observability.py  openrouter_service.py  prediction_models.py  shap_explainer.py
backend/app/preprocess/: feature_engineering.py
backend/app/xai/: shap_explainer.py
backend/docs/: COMMANDS.md  README.md
backend/model_data/: demo_datasets.pkl  feature_names.pkl  fraud_model.pkl  model_version.json  optimal_threshold.pkl
backend/scripts/: convert_datasets.py  convert_to_json.py  examine_datasets.py  generate_transactions.py  run_pipeline.py  seed_utils.py
backend/tests/: test_database.py  test_model_service.py  test_openrouter.py  test_shap_integration.py
docs/: DOCUMENTATION.md  QUICKSTART.md
frontend/: COMPONENTS.md  Dockerfile.dev  Dockerfile.prod  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/cards/: page.tsx
frontend/components/: AnalysisResults.tsx  DashboardHeader.tsx  FormattedExplanation.tsx  Header.tsx  JsonInput.tsx  LLMExplanation.tsx  ResultsPanel.tsx  TabbedResultsPanel.tsx  ThemeContext.tsx  TransactionCard.tsx  TransactionCardInput.tsx
frontend/components/analysis/: AnalysisCard.tsx  AnalysisResults.tsx  (+2 more)
frontend/data/: fraud_transactions.json  legitimate_transactions.json  mixed_transactions.json  suspicious_transactions.json
frontend/lib/: newSampleData.ts  sampleData.ts  transactionUtils.ts
frontend/types/: fraud.d.ts
notebooks/: xgboost_classification.ipynb
(+5 files in other folders)
